--- a/sample-3.yml
+++ b/sample-3.yml
@@ -5,8 +5,11 @@
     Name: HULK
     Cloud: AWS
   tasks: 
-  - name: print information
-    vars:
-      Name: Iron Man
-    ansible.builtin.debug:
-      msg: "Hii, i am {{Name}} and i am learning {{Course}} with {{Cloud}}"
+    - name: print information
+      vars:
+        Name: Iron Man
+      ansible.builtin.debug:
+        msg: "Hii, i am {{Name}} and i am learning {{Course}} with {{Cloud}}"
+    - name: print information 1
+      ansible.builtin.debug:
+        msg: "Hii, i am {{Name}} and i am learning {{Course}} with {{Cloud}}"
