This is a sample file

--- a/vars_prompt-1.yml
+++ b/vars_prompt-1.yml
@@ -1,7 +1,7 @@
 - name: Playbook with vars_prompt
   hosts: localhost
   vars_prompt:
-    - name: name
+    - name: Name
       prompt: "Enter your name"
       private: no  # Indicates whether the input should be hidden (e.g., for passwords)
     - name: Age
