--- a/02-data-conversion.yml
+++ b/02-data-conversion.yml
@@ -9,4 +9,4 @@
   tasks:
     - name: List to dictionary
       ansible.builtin.debug:
-        msg: "{{ my_list | dict2list }}"
+        msg: "{{ my_list | dict2items }}"
