This is a sample file

--- a/01-data-conversion.yml
+++ b/01-data-conversion.yml
@@ -30,3 +30,7 @@
     - name: Convert string to dictionary
       debug:
         msg: "Dictionary value: {{ json_string | from_json }}"
+
+    - name: Convert string to Uppercase
+      debug:
+        msg: "{{ true_string | upper }}"
