--- a/DataBase.yml
+++ b/DataBase.yml
@@ -1,7 +1,18 @@
-- name: Setting up MySQL Root Password
+- name: Setting up MySQL
   hosts: db
   become: yes
   tasks:
+    - name: Installing MySQL
+      ansible.builtin.dnf:
+        name: mysql-server
+        state: latest
+
+    - name: Enabling MySQL-Server
+      ansible.builtin.service:
+        name: mysqld
+        state: started
+        enabled: yes
+        
     - name: check if MySQL root password is set
       ansible.builtin.shell:
         cmd: "mysql -u root -p ExpenseApp@1 -e 'SHOW DATABASES;'"
@@ -15,4 +26,4 @@
     - name: Creating root Password
       ansible.builtin.shell:
         cmd: "mysql_secure_installation --set-root-pass ExpenseApp@1"
-      when: my_sql_root_check.rc ! = 0
+      when: my_sql_root_check.rc != 0
