--- a/DataBase.yml
+++ b/DataBase.yml
@@ -19,7 +19,7 @@
 
     - name: check if MySQL root password is set
       ansible.builtin.shell:
-        cmd: "mysql -u root --password -e 'SHOW DATABASES;'"
+        cmd: "mysql -h 172.31.16.143 -u root --password -e 'SHOW DATABASES;'"
       ignore_errors: yes
       register: my_sql_root_check
 
