--- a/DataBase.yml
+++ b/DataBase.yml
@@ -39,6 +39,7 @@
         login_user: "{{ mysql_root_user }}"
         login_password: "{{ mysql_root_password }}"
         login_host: 172.31.19.23
+        user: "{{ mysql_root_user }}"
         #check_implicit_admin: yes  # Use this if the playbook might run on systems where root has no password but can authenticate without one
       register: my_sql_password_check
       ignore_errors: yes 
@@ -56,7 +57,7 @@
         msg: Succesfully 2
 
     - name: Creating root Password
-      ansible.builtin.shell:
+      ansible.builtin.command:
         cmd: mysql_secure_installation --set-root-pass {{ mysql_root_password }}
       when: my_sql_password_check.rc != 0
 
