--- a/DataBase.yml
+++ b/DataBase.yml
@@ -61,6 +61,13 @@
       ansible.builtin.command:
         cmd: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
       when: my_sql_password_check.failed is true
+      register: storing
+      ignore_error: yes
+
+    - name: Prompt
+      ansible.builtin.debug:
+        msg: MySQL root password is already set
+      when: storing.rc != 0
 
     - name: Checking  
       ansible.builtin.debug:
