--- a/DataBase.yml
+++ b/DataBase.yml
@@ -31,6 +31,7 @@
         state: latest
         executable: pip3.9
       loop:
+        - PyMySQL
         - mysql-connector-python
         - cryptography
 
