--- a/Backend.yml
+++ b/Backend.yml
@@ -14,5 +14,31 @@
       ansible.builtin.dnf:
         name: nodejs
         state: latest
-        
+
+    - name: Creating/adding user
+      ansible.builtin.user:
+        name: expense
+
+    - name: Creating a directory
+      ansible.builtin.file:
+        path: /app
+        state: directory
+
+    - name: Downloading application code
+      ansible.builtin.get_url:
+        url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+        dest: /tmp/backend.zip
+    
+    - name: unzip backend file 
+      ansible.builtin.unarchive: #When remote_src is set to yes, it indicates that the source archive file exists on the remote host. 
+        src: /tmp/backend.zip
+        dest: /app
+        remote_src: yes 
+
+    - name: Installing dependencies 
+      ansible.builtin.shell:
+        cmd: npm install 
+        args:
+          chdir: /app
+
         
