--- a/Backend.yml
+++ b/Backend.yml
@@ -54,7 +54,7 @@
 
     - name: starting and enabling backend
       ansible.builtin.service:
-        name: Backend
+        name: backend
         state: started
         enabled: yes
 
