--- a/Frontend.yml
+++ b/Frontend.yml
@@ -13,11 +13,11 @@
         state: started
         enabled: yes
 
-    - name: Clear contents of a file
-      ansible.builtin.copy:
-        dest: /usr/share/nginx/html/*
-        content: ""
-        force: yes
+    - name: Delete contents of a directory
+      ansible.builtin.file:
+        path: /usr/share/nginx/html/*
+        state: absent
+        recurse: yes
 
 
     
