--- a/Frontend.yml
+++ b/Frontend.yml
@@ -15,7 +15,7 @@
 
     - name: Delete contents of a directory
       ansible.builtin.file:
-        path: /usr/share/nginx/html
+        path: /usr/share/nginx/html/*
         state: directory
         recurse: yes
 
