--- a/Frontend.yml
+++ b/Frontend.yml
@@ -15,9 +15,8 @@
 
     - name: Delete contents of a directory
       ansible.builtin.file:
-        path: /usr/share/nginx/html/
+        path: /usr/share/nginx/html/*
         state: absent
-        recurse: yes
 
 
     
