--- a/Frontend.yml
+++ b/Frontend.yml
@@ -18,5 +18,8 @@
         path: /usr/share/nginx/html
         state: absent
 
-
+    - name: creating a new html directory
+      ansible.builtin.file:
+        path: /usr/share/nginx/html
+        state: directory
     
