--- a/Ansible-roles/roles/Backend/tasks/main.yml
+++ b/Ansible-roles/roles/Backend/tasks/main.yml
@@ -41,7 +41,7 @@
 
 - name: Setting up Backend service
   ansible.builtin.copy:
-    src: Backend.service
+    src: Backend.service.j2
     dest: /etc/systemd/system/backend.service
 
 - name: Install MySQL Python dependencies using pip
