--- a/Ansible-roles/roles/Backend/tasks/main.yml
+++ b/Ansible-roles/roles/Backend/tasks/main.yml
@@ -40,7 +40,7 @@
     chdir: /app
 
 - name: Setting up Backend service
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src: Backend.service.j2
     dest: /etc/systemd/system/backend.service
 
