This is a Backend file

--- a/Ansible-roles/roles/Frontend/tasks/main.yml
+++ b/Ansible-roles/roles/Frontend/tasks/main.yml
@@ -32,11 +32,11 @@
 
 - name: setting up cofigurtion
   ansible.builtin.copy:
-    src: expense.conf
+    src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
 
 - name: Restart nginx
-  ansible.builtin.template:
+  ansible.builtin.templates:
     name: nginx
     state: restarted
   notify:
