--- a/Ansible-roles/roles/Frontend/tasks/main.yml
+++ b/Ansible-roles/roles/Frontend/tasks/main.yml
@@ -31,13 +31,14 @@
     remote_src: yes
 
 - name: setting up cofigurtion
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
-
-- name: Restart nginx
-  ansible.builtin.templates:
-    name: nginx
-    state: restarted
   notify:
     - Restart nginx
+
+# - name: Restart nginx
+#   ansible.builtin.templates:
+#     name: nginx
+#     state: restarted
+  
