--- a/Ansible-roles/roles/Frontend/tasks/main.yml
+++ b/Ansible-roles/roles/Frontend/tasks/main.yml
@@ -14,21 +14,9 @@
     path: /usr/share/nginx/html
     state: absent
 
-- name: creating a new html directory
-  ansible.builtin.file:
-    path: /usr/share/nginx/html
-    state: directory
-
-- name: Downloading Frontend code
-  ansible.builtin.get_url:
-    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
-    dest: /tmp/frontend.zip
-
-- name: unzip backend file 
-  ansible.builtin.unarchive: #When remote_src is set to yes, it indicates that the source archive file exists on the remote host. 
-    src: /tmp/frontend.zip
-    dest: /usr/share/nginx/html
-    remote_src: yes
+- name: run common tasks
+  ansible.builtin.import_role:
+    name: common
 
 - name: setting up cofigurtion
   ansible.builtin.template:
