--- a/Ansible-roles/aws_ec2.yml
+++ b/Ansible-roles/aws_ec2.yml
@@ -8,5 +8,5 @@ keyed_groups:
     prefix: ''
 hostnames:
   - private-ip-address
-# compose:
-#   ansible_host: private_ip_address
+compose:
+  ansible_host: private_ip_address
