This is a Backend file

--- a/Ansible-roles/get_private_ips.yml
+++ b/Ansible-roles/get_private_ips.yml
@@ -6,3 +6,8 @@
     - name: Print Private IP Addresses
       debug:
         msg: "The private IP address is {{ ansible_host }}"
+    
+    - name: installing sql
+      ansible.builtin.dnf:  
+        name: mysql
+        state: latest
