--- a/Ansible-roles/roles/Backend/tasks/main.yml
+++ b/Ansible-roles/roles/Backend/tasks/main.yml
@@ -46,7 +46,7 @@
   ansible.builtin.mysql_db:
     login_user: "{{ mysql_root_user }}"
     login_password: "{{ mysql_root_password }}"
-    login_host: 172.31.90.220
+    login_host: root
     name: all
     state: import
     target: /app/schema/backend.sql
