--- a/Ansible-roles-Practice/main.yml
+++ b/Ansible-roles-Practice/main.yml
@@ -1,10 +1,8 @@
 - name: "Configure server based on component"
-  hosts: "{{ component }}"
+  hosts: localhost
   connection: local
   become: yes
   roles:
     - role: "{{ component }}"
-  vars_prompt:
-    - name: "component"
-      prompt: "Enter the component name"
-      private: no
+  vars_files:
+    - "variables-dev.yml"
