--- a/Ansible-roles-Practice/roles/Backend/tasks/main.yml
+++ b/Ansible-roles-Practice/roles/Backend/tasks/main.yml
@@ -55,7 +55,7 @@
   ansible.builtin.mysql_db:
     login_user: "{{ mysql_root_user }}"
     login_password: "{{ mysql_root_password }}"
-    login_host: 172.31.83.209
+    login_host: "{{ DB_HOST }}"
     name: all
     state: import
     target: /app/schema/backend.sql
