--- a/Ansible-roles-Practice/roles/Backend/tasks/main.yml
+++ b/Ansible-roles-Practice/roles/Backend/tasks/main.yml
@@ -6,7 +6,7 @@
   ansible.builtin.command:
     cmd: dnf module enable nodejs:20 -y
 
-- name: Installing Nodejs
+- name: Installing Nodejs and MySQL
   ansible.builtin.dnf:
     name: "{{ item }}"
     state: latest
