--- a/Ansible-roles-Practice/roles/Backend/tasks/main.yml
+++ b/Ansible-roles-Practice/roles/Backend/tasks/main.yml
@@ -1,6 +1,6 @@
-- name: Setup Backend Server
-  become: yes
-  tasks:
+name: Setup Backend Server
+become: yes
+tasks:
   - name: "Disable Nodejs: 18"
     ansible.builtin.command:
       cmd: dnf module disable nodejs -y
