--- a/Ansible-roles-Practice/main.yml
+++ b/Ansible-roles-Practice/main.yml
@@ -3,6 +3,6 @@
   connection: local
   become: yes
   roles:
-    - role: "{{ component }}"
+    - role: "Frontend"
   vars_files:
     - "variables-dev.yml"
